# PCCSET

./: CMakeLists.txt  LICENSE  README.md
data/Classification/Big Data/: labels.txt  preds.txt
data/Classification/Simple Data/: scene_XYZL_gt.pcd  scene_XYZL_pred.pcd  scene_XYZRGBL_gt.pcd  scene_XYZRGBL_pred.pcd  scene_XYZRGB_gt.pcd  scene_XYZRGB_pred.pcd  scene_XYZ_pred.pcd  scene_XYZ_pred.txt  scene_labels.txt  scene_pred.txt
include/PCCSET/: EditOperations.h  EvaluateOperations.h  ExcelDialog.h  FileOperations.h  PCCSET.h  SnapshotDialog.h  ToolOperations.h  ViewOperations.h
src/: EditOperations.cpp  EvaluateOperations.cpp  ExcelDialog.cpp  FileOperations.cpp  PCCSET.cpp  SnapshotDialog.cpp  ToolOperations.cpp  ViewOperations.cpp  icons.qrc  main.cpp
ui/: ExcelDialog.ui  PCCSET.ui  SnapshotDialog.ui
